--- a/package.xml
+++ b/package.xml
@@ -66,6 +66,9 @@ of communication.</description>
     <channel>pear.php.net</channel>
     <min>1.3.6</min>
    </package>
+   <extension>
+    <name>mbstring</name>
+   </extension>
   </required>
  </dependencies>
  <phprelease />
