--- a/package.xml
+++ b/package.xml
@@ -73,9 +73,17 @@ of communication.</description>
     <min>1.3.6</min>
    </package>
    <extension>
+    <name>bcmath</name>
+   </extension>
+   <extension>
     <name>mbstring</name>
    </extension>
   </required>
+  <optional>
+   <extension>
+    <name>gmp</name>
+   </extension>
+  </optional>
  </dependencies>
  <phprelease />
  <changelog>
