--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.8.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
  <name>Crypt_DiffieHellman</name>
  <channel>pear.php.net</channel>
  <summary>Implementation of Diffie-Hellman Key Exchange cryptographic protocol for PHP5</summary>
@@ -25,11 +25,17 @@ of communication.</description>
   <email>shupp@php.net</email>
   <active>yes</active>
  </lead>
- <date>2009-06-29</date>
- <time>08:47:36</time>
+ <lead>
+  <name>Bill Shupp</name>
+  <user>shupp</user>
+  <email>shupp@php.net</email>
+  <active>yes</active>
+ </lead>
+ <date>2010-04-04</date>
+ <time>07:03:11</time>
  <version>
-  <release>0.2.3</release>
-  <api>0.2.3</api>
+  <release>0.2.4</release>
+  <api>0.2.4</api>
  </version>
  <stability>
   <release>beta</release>
@@ -37,31 +43,33 @@ of communication.</description>
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
  <notes>
-* Fixed Bug #16379
+* Make bcmath required, gmp optional instead of the other way around
  </notes>
  <contents>
   <dir baseinstalldir="Crypt" name="/">
-   <dir name="DiffieHellman">
-    <dir name="Math">
-     <dir name="BigInteger">
-      <file name="Bcmath.php" role="php" />
+   <dir name="Crypt">
+    <dir name="DiffieHellman">
+     <dir name="Math">
+      <dir name="BigInteger">
+       <file name="Bcmath.php" role="php" />
+       <file name="Exception.php" role="php" />
+       <file name="Gmp.php" role="php" />
+       <file name="Interface.php" role="php" />
+      </dir> <!-- /Crypt/DiffieHellman/Math/BigInteger -->
+      <file name="BigInteger.php" role="php" />
       <file name="Exception.php" role="php" />
-      <file name="Gmp.php" role="php" />
-      <file name="Interface.php" role="php" />
-     </dir> <!-- /DiffieHellman/Math/BigInteger -->
-     <file name="BigInteger.php" role="php" />
+     </dir> <!-- /Crypt/DiffieHellman/Math -->
      <file name="Exception.php" role="php" />
-    </dir> <!-- /DiffieHellman/Math -->
-    <file name="Exception.php" role="php" />
-    <file name="Math.php" role="php" />
-   </dir> <!-- /DiffieHellman -->
+     <file name="Math.php" role="php" />
+    </dir> <!-- /Crypt/DiffieHellman -->
+    <file name="DiffieHellman.php" role="php" />
+   </dir> <!-- /Crypt -->
    <dir name="tests">
     <file name="AllTests.php" role="test" />
     <file name="DiffieHellmanTest.php" role="test" />
     <file name="TestConfiguration.php.dist" role="test" />
     <file name="TestHelper.php" role="test" />
    </dir> <!-- /tests -->
-   <file name="DiffieHellman.php" role="php" />
   </dir> <!-- / -->
  </contents>
  <dependencies>
@@ -78,7 +86,7 @@ of communication.</description>
     <min>1.3.6</min>
    </package>
    <extension>
-    <name>gmp</name>
+    <name>bcmath</name>
    </extension>
    <extension>
     <name>mbstring</name>
@@ -86,12 +94,27 @@ of communication.</description>
   </required>
   <optional>
    <extension>
-    <name>bcmath</name>
+    <name>gmp</name>
    </extension>
   </optional>
  </dependencies>
  <phprelease />
  <changelog>
+  <release>
+   <version>
+    <release>0.2.4</release>
+    <api>0.2.4</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2010-04-04</date>
+   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+* Make bcmath required, gmp optional instead of the other way around
+   </notes>
+  </release>
   <release>
    <version>
     <release>0.2.3</release>
