--- a/package.xml
+++ b/package.xml
@@ -31,10 +31,16 @@ of communication.</description>
   <email>shupp@php.net</email>
   <active>yes</active>
  </lead>
- <date>2010-04-04</date>
- <time>07:03:11</time>
+ <lead>
+  <name>Bill Shupp</name>
+  <user>shupp</user>
+  <email>shupp@php.net</email>
+  <active>yes</active>
+ </lead>
+ <date>2010-05-29</date>
+ <time>20:34:49</time>
  <version>
-  <release>0.2.4</release>
+  <release>0.2.5</release>
   <api>0.2.4</api>
  </version>
  <stability>
@@ -46,7 +52,7 @@ of communication.</description>
 * Make bcmath required, gmp optional instead of the other way around
  </notes>
  <contents>
-  <dir baseinstalldir="Crypt" name="/">
+  <dir baseinstalldir="/" name="/">
    <dir name="Crypt">
     <dir name="DiffieHellman">
      <dir name="Math">
@@ -100,6 +106,21 @@ of communication.</description>
  </dependencies>
  <phprelease />
  <changelog>
+  <release>
+   <version>
+    <release>0.2.5</release>
+    <api>0.2.4</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2010-05-29</date>
+   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+* Make bcmath required, gmp optional instead of the other way around
+   </notes>
+  </release>
   <release>
    <version>
     <release>0.2.4</release>
