--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.0" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
  <name>Crypt_DiffieHellman</name>
  <channel>pear.php.net</channel>
  <summary>Implementation of Diffie-Hellman Key Exchange cryptographic protocol for PHP5</summary>
@@ -37,8 +37,14 @@ of communication.</description>
   <email>shupp@php.net</email>
   <active>yes</active>
  </lead>
+ <lead>
+  <name>Bill Shupp</name>
+  <user>shupp</user>
+  <email>shupp@php.net</email>
+  <active>yes</active>
+ </lead>
  <date>2010-05-29</date>
- <time>20:34:49</time>
+ <time>20:48:57</time>
  <version>
   <release>0.2.5</release>
   <api>0.2.4</api>
@@ -49,7 +55,7 @@ of communication.</description>
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
  <notes>
-* Make bcmath required, gmp optional instead of the other way around
+* Fixes #17446.  Removed dl() support for loading big integer extensions
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -118,7 +124,7 @@ of communication.</description>
    <date>2010-05-29</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
    <notes>
-* Make bcmath required, gmp optional instead of the other way around
+* Fixes #17446.  Removed dl() support for loading big integer extensions
    </notes>
   </release>
   <release>
