--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<package packagerversion="1.9.1" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
+<package packagerversion="1.9.4" version="2.0" xmlns="http://pear.php.net/dtd/package-2.0" xmlns:tasks="http://pear.php.net/dtd/tasks-1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://pear.php.net/dtd/tasks-1.0     http://pear.php.net/dtd/tasks-1.0.xsd     http://pear.php.net/dtd/package-2.0     http://pear.php.net/dtd/package-2.0.xsd">
  <name>Crypt_DiffieHellman</name>
  <channel>pear.php.net</channel>
  <summary>Implementation of Diffie-Hellman Key Exchange cryptographic protocol for PHP5</summary>
@@ -19,11 +19,11 @@ of communication.</description>
   <email>padraic@php.net</email>
   <active>no</active>
  </lead>
- <date>2010-05-29</date>
- <time>20:48:57</time>
+ <date>2012-04-01</date>
+ <time>19:56:45</time>
  <version>
-  <release>0.2.5</release>
-  <api>0.2.4</api>
+  <release>0.2.6</release>
+  <api>0.2.6</api>
  </version>
  <stability>
   <release>beta</release>
@@ -68,11 +68,6 @@ of communication.</description>
    <pearinstaller>
     <min>1.4.0b1</min>
    </pearinstaller>
-   <package>
-    <name>PEAR</name>
-    <channel>pear.php.net</channel>
-    <min>1.3.6</min>
-   </package>
    <extension>
     <name>bcmath</name>
    </extension>
@@ -88,7 +83,21 @@ of communication.</description>
  </dependencies>
  <phprelease />
  <changelog>
-
+  <release>
+   <version>
+    <release>0.2.6</release>
+    <api>0.2.6</api>
+   </version>
+   <stability>
+    <release>beta</release>
+    <api>beta</api>
+   </stability>
+   <date>2012-04-01</date>
+   <license uri="http://opensource.org/licenses/bsd-license.php">New BSD License</license>
+   <notes>
+* Removed PEAR dependency
+   </notes>
+  </release>
   <release>
    <version>
     <release>0.2.5</release>
