Make composer.json valid

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+    "name": "pear/crypt_diffiehellman",
+    "description": "Implementation of Diffie-Hellman Key Exchange cryptographic protocol for PHP5",
+    "license": "BSD-2-Clause",
+    "support": {
+        "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=Crypt_DiffieHellman",
+        "source": "https://github.com/pear/Crypt_DiffieHellman"
+    },
+    "type": "library",
     "authors": [
         {
             "email": "shupp@php.net",
@@ -9,26 +17,6 @@
             "email": "padraic@php.net",
             "name": "P\u00e1draic Brady",
             "role": "Lead"
-        },
-        {
-            "email": "shupp@php.net",
-            "name": "Bill Shupp",
-            "role": "Lead"
-        },
-        {
-            "email": "shupp@php.net",
-            "name": "Bill Shupp",
-            "role": "Lead"
-        },
-        {
-            "email": "shupp@php.net",
-            "name": "Bill Shupp",
-            "role": "Lead"
-        },
-        {
-            "email": "shupp@php.net",
-            "name": "Bill Shupp",
-            "role": "Lead"
         }
     ],
     "autoload": {
@@ -36,25 +24,16 @@
             "Crypt": "./"
         }
     },
-    "description": "More info available on: http://pear.php.net/package/Crypt_DiffieHellman",
     "include-path": [
         "./"
     ],
-    "license": "New BSD License",
-    "name": "pear/crypt_diffiehellman",
-    "support": {
-        "issues": "http://pear.php.net/bugs/search.php?cmd=display&package_name[]=Crypt_DiffieHellman",
-        "source": "https://github.com/pear/Crypt_DiffieHellman"
-    },
-    "type": "library",
     "suggest": {
         "ext-gmp": "May require the gmp PHP extension"
     },
     "require": {
-        "pear/pear_exception": "*",
-        "pear/pear": "*"
+        "pear/pear_exception": "^1.0.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "^5.7"
     }
 }
